# django_cv

./: .env  Makefile  pyproject.toml
src/: db.sqlite3  manage.py
src/django_cv/: asgi.py  settings.py  urls.py  wsgi.py
src/global_utils/: pagination.py
src/settings/: _from_dotenv.py  apps.py  auth.py  common.py  db.py  jwt.py  middleware.py  rest_framework.py  templates.py
src/todolist/: admin.py  serializers.py  urls.py  views.py
src/todolist/models/: todo.py
